--- a/ParticleSony/vc2013/ParticleSony.vcxproj.filters
+++ b/ParticleSony/vc2013/ParticleSony.vcxproj.filters
@@ -518,6 +518,9 @@
     <ClInclude Include="..\src\Contour\ParticleContour.h">
       <Filter>Source Files\contour</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\Shaders\Stencil.h">
+      <Filter>Source Files\shaders</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resources.rc">
